--- a/views/products.hbs
+++ b/views/products.hbs
@@ -3,7 +3,7 @@
   {{!-- CATEGORY --}}
   <aside class="tag-wrapper">
     <h4 class="tag-title">All Tags</h4>
-    <ul id="tag_list" class="tag-list" data-category="{{category}}">
+    <ul id="tag_list" class="tag-list" data-category="{{sneackers.category}}">
       {{#each tags}}
       <li class="tag-list-item">
         <input id="input_{{this._id}}" type="checkbox" data-tag-id="{{this._id}}" class="checkbox" />
