--- a/views/one_product.hbs
+++ b/views/one_product.hbs
@@ -4,6 +4,8 @@
       <h1 class="sneak-name">{{sneaker.name}}</h1>
       <p class="sneak-description">{{sneaker.description}}</p>
       <p class="sneak-ref">Ref. {{sneaker.ref}}</p>
+      <p class="product-price">$ {{sneaker.price}}</p>
+      <p>{{sneaker.category}}</p>
     </div>
   </div>
   <div class="flexed-item">
@@ -14,8 +16,8 @@
       <option value="">37</option>
       <option value="">38</option>
       <option value="">39</option>
-    </select>  
-    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a> 
+    </select>
+    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a>
   </div>
 
   <div class="sneak-img-container">
