--- a/views/one_product.hbs
+++ b/views/one_product.hbs
@@ -19,7 +19,7 @@
   </div>
 
   <div class="sneak-img-container">
-    <img src="{{sneaker.image}}" alt="img-product" class="sneak-img">
+    <img src="{{sneaker.picture}}" alt="img-product" class="sneak-img">
   </div>
 
 </div>
