--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,13 +2,18 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   {{> shop_head}}
 </head>
 
 <body>
+
   {{> shop_nav}}
   {{{body}}}
   {{> shop_footer}}
+
 </body>
 
 </html>
