--- a/views/partials/sneaker_mini.hbs
+++ b/views/partials/sneaker_mini.hbs
@@ -1,6 +1,6 @@
 <a href="/one-product/{{this._id}}" class="product-item-wrapper">
     <div class="product-img">
-        <img src="{{this.image}}" alt="{{this.name}} : what a nice pair of kicks">
+        <img src="{{this.picture}}" alt="{{this.name}} : what a nice pair of kicks">
     </div>
     <p class="product-name">{{this.name}}</p>
     <p class="product-cat">{{this.category}}</p>
