--- a/views/partials/dashboard_sneaker_row.hbs
+++ b/views/partials/dashboard_sneaker_row.hbs
@@ -11,8 +11,10 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/product-edit/{{this._id}}" data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></a>
+  <a href="/dashboard/prod-edit/{{this._id}}" data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></a>
 </td>
 <td class="table-division">
-  <span class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></span>
+  <a href="http://google.com" class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></a>
 </td>
+
+{{!-- href="/dashboard/prod-delete/{{this._id}} --}}
