--- a/views/partials/shop_nav.hbs
+++ b/views/partials/shop_nav.hbs
@@ -26,10 +26,10 @@
           </li>
           {{#if isAdmin}}
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-add">Add product</a>
+            <a href="/dashboard/prod-add">Add product</a>
           </li>
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-manage">Manage products</a>
+            <a href="/dashboard/prod-manage">Manage products</a>
           </li>
           {{/if}}
         </ul>
