--- a/views/partials/dashboard_sneaker_row.hbs
+++ b/views/partials/dashboard_sneaker_row.hbs
@@ -11,10 +11,12 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/dashboard/prod-edit/{{this._id}}" data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></a>
+
+  <a href="/dashboard/prod-edit/{{this._id}}" data-id-sneaker="{{this._id}}"><span
+      class="fa fa-edit table-icon"></span></a>
 </td>
 <td class="table-division">
-  <a href="http://google.com" class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></a>
+  <a href="/dashboard/prod-delete/{{this._id}}" data-id-sneaker="{{this._id}}" aria-hidden="true">
+    <span class="fa fa-trash table-icon"></span>
+  </a>
 </td>
-
-{{!-- href="/dashboard/prod-delete/{{this._id}} --}}
