--- a/views/partials/shop_nav.hbs
+++ b/views/partials/shop_nav.hbs
@@ -37,8 +37,8 @@
       </div>
       <div class="flexed-item nav-end">
         {{#unless isLoggedIn}}
-        <a  href="/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
-          <span class="btn-text">Sign in</span>
+        <a  href="/signin" id="nav_login" class="button-ternary flexed-item nav-end-item">
+          <span class="btn-text">Sign up (pour t'inscrire copain')</span>
         </a>
         {{/unless}}
         {{#if isLoggedIn}}
