--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -57,3 +57,6 @@
     <button id="btn_new_tag" class="button-primary add-category-btn">Create this category</button>
   </form>
 </div>
+
+axios.post("/laroutesurlaquellejecréeuntag", unobjetavecladata)
+.then(tagnouvellementcrée => log(tagnouvelle..))
