--- a/views/partials/form_tags_select.hbs
+++ b/views/partials/form_tags_select.hbs
@@ -1,5 +1,5 @@
 <select name="label" id="tags" class="select">
-    <option value="-1" disabled selected>Choose a category</option>
+    <option value="-1" disabled selected>Choose a tag</option>
     {{#each allTags}}
     <option value="{{this._id}}">{{this.label}}</option>
     {{/each}}
