--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -47,7 +47,7 @@
     <button class="button-primary add-sneaker-btn">Add to collection</button>
   </form>
 
-  <form method="post" action="/dashboard/tag-add" class="add-tag-form">
+  <div class="add-tag-form">
     <p id="add-tag-message" class="msg"></p>
     <h3 class="form-title">Add tags</h3>
     <div class="form-item-wrapper flexed-item">
@@ -55,8 +55,5 @@
       <input name="label" id="new_tag_name" type="text" class="input" placeholder="ex: Gangsta">
     </div>
     <button id="btn_new_tag" class="button-primary add-category-btn">Create this category</button>
-  </form>
+  </div>
 </div>
-
-axios.post("/laroutesurlaquellejecréeuntag", unobjetavecladata)
-.then(tagnouvellementcrée => log(tagnouvelle..))
