--- a/views/one_product.hbs
+++ b/views/one_product.hbs
@@ -1,9 +1,9 @@
 <div class="one-product-container">
   <div class="sneak-info">
     <div class="sneak-info-header">
-      <h1 class="sneak-name">{{sneaker.name}}</h1>
-      <p class="sneak-description">{{sneaker.description}}</p>
-      <p class="sneak-ref">Ref. {{sneaker.ref}}</p>
+      <h1 class="sneak-name">{{name}}</h1>
+      <p class="sneak-description">{{description}}</p>
+      <p class="sneak-ref">Ref. {{ref}}</p>
     </div>
   </div>
   <div class="flexed-item">
@@ -14,12 +14,12 @@
       <option value="">37</option>
       <option value="">38</option>
       <option value="">39</option>
-    </select>  
-    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a> 
+    </select>
+    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a>
   </div>
 
   <div class="sneak-img-container">
-    <img src="{{sneaker.image}}" alt="img-product" class="sneak-img">
+    <img src="{{image}}" alt="img-product" class="sneak-img">
   </div>
 
 </div>
