--- a/views/products.hbs
+++ b/views/products.hbs
@@ -17,7 +17,7 @@
   <section class="products-wrapper">
     <div class="products-infos">
       <h4 class="products-title">
-        {{#compare category "collection" operator="==="}}
+        {{#compare category "{{this}}" operator="==="}}
         Whole
         {{/compare}}
         {{#compare category "collection" operator="!="}}
