--- a/views/one_product.hbs
+++ b/views/one_product.hbs
@@ -1,11 +1,12 @@
 <div class="one-product-container">
   <div class="sneak-info">
     <div class="sneak-info-header">
-      <h1 class="sneak-name">{{sneaker.name}}</h1>
-      <p class="sneak-description">{{sneaker.description}}</p>
-      <p class="sneak-ref">Ref. {{sneaker.ref}}</p>
+      <h1 class="sneak-name">{{this.name}}</h1>
+      <p class="sneak-description">{{this.description}}</p>
+      <p class="sneak-ref">Ref. {{this.ref}}</p>
     </div>
   </div>
+
   <div class="flexed-item">
     <select name="main-category" id="main_category" class="select sneak-select">
       {{!-- bonus : add different sizes on the model + forms  --}}
@@ -14,12 +15,11 @@
       <option value="">37</option>
       <option value="">38</option>
       <option value="">39</option>
-    </select>  
-    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a> 
+    </select>
+    <a href="" class="button-primary a-link">Add to cart <i class="fas fa-shopping-cart shop-cart-icon-page"></i></a>
   </div>
 
   <div class="sneak-img-container">
-    <img src="{{sneaker.image}}" alt="img-product" class="sneak-img">
+    <img src="{{this.image}}" alt="img-product" class="sneak-img">
   </div>
-
 </div>
