--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -26,7 +26,7 @@
           </li>
           {{#if isLoggedIn}}
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-add">Add product</a>
+            <a href="/productsAdd">Add product</a>
           </li>
           <li class="nav-item animated-link nav-item-admin">
             <a href="/prod-manage">Manage products</a>
