--- a/view/partial/dashboard_sneaker_row.hbs
+++ b/view/partial/dashboard_sneaker_row.hbs
@@ -11,8 +11,8 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/product-edit/{{this._id}}" data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></a>
+  <a href="/prod-edit/{{this._id}}"><span data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></span></a>
 </td>
 <td class="table-division">
-  <a href="/manage/delete/{{this._id}}" class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></a>
+  <a href="/manage/delete/{{this._id}}"><span class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></span></a>
 </td>
