--- a/view/products_add.hbs
+++ b/view/products_add.hbs
@@ -1,7 +1,7 @@
 <div class="big-container product-manage-wrapper flexed-item">
   <form action="/product-add" method="post" class="add-product-form" enctype="multipart/form-data">
     {{#if msg}}
-    <p class="msg {{msg.statu}}">{{msg.txt}}</p>
+    <p class="msg {{msg.status}}">{{msg.txt}}</p>
     {{/if}}
     <h3 class="form-title">Add sneakers to the collection</h3>
     <div class="form-item-wrapper flexed-item">
@@ -31,7 +31,7 @@
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="category" class="label-main-cat label">Main category</label>
-      <select id="category" class="select" required>
+      <select id="category" name="category" class="select" required>
         <option value="-1" disabled selected>Choose a category</option>
         <option value="men">Men</option>
         <option value="women">Women</option>
