--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -1,32 +1,30 @@
 <div class="big-container product-manage-wrapper flexed-item">
-  <form action="/create/prod-add" method="POST" class="add-product-form" enctype="multipart/form-data">
+  <form action="/dashboard/create" method="POST" class="add-product-form" enctype="multipart/form-data">
     {{#if msg}}
     <p class="msg {{msg.status}}">{{msg.txt}}</p>
     {{/if}}
     <h3 class="form-title">Add sneakers to the collection</h3>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-name" class="label-name label">Model name</label>
-      <input id="sneaker-name" name="sneaker-name" type="text" class="input-text input" placeholder="Nike Air Max 90"
+      <input id="sneaker-name" name="name" type="text" class="input-text input" placeholder="Nike Air Max 90"
         value="air max 1">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-ref" class="label-ref label">Réf.</label>
-      <input id="sneaker-ref" name="sneaker-ref" type="text" class="input-text input" placeholder="ex: NV23498"
-        value="NV23498">
+      <input id="sneaker-ref" name="ref" type="text" class="input-text input" placeholder="ex: NV23498" value="NV23498">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-size" class="label-ref label">Size</label>
-      <input id="sneaker-size" name="sneaker-size" type="number" class="input-text input" placeholder="ex: 37"
-        value="42">
+      <input id="sneaker-size" name="size" type="number" class="input-text input" placeholder="ex: 37" value="42">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-descr" class="label-descr label">Description</label>
-      <input id="sneaker-descr" name="sneaker-descr" type="text" class="input-text input"
+      <input id="sneaker-descr" name="description" type="text" class="input-text input"
         placeholder="The better sneakers to run" value="foo bar baz">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-price" class="label-price label">Price</label>
-      <input id="sneaker-price" name="sneaker-price" type="number" class="sneaker-price input" min="1" value="123">
+      <input id="sneaker-price" name="price" type="number" class="sneaker-price input" min="1" value="123">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-img" class="label-price label">Image</label>
@@ -53,8 +51,8 @@
     <p id="add-tag-message" class="msg"></p>
     <h3 class="form-title">Add tags</h3>
     <div class="form-item-wrapper flexed-item">
-      <label for="category-name" class="category-name label">Sneaker tag</label>
-      <input id="new_tag_name" name="category-name" type="text" class="input" placeholder="ex: Gangsta">
+      <label for="new_tag_name" class="category-name label">Sneaker tag</label>
+      <input id="new_tag_name" name="tag" type="text" class="input" placeholder="ex: Gangsta">
     </div>
     <button id="btn_new_tag" class="button-primary add-category-btn">Create this category</button>
   </div>
