--- a/view/partial/shop_nav.hbs
+++ b/view/partial/shop_nav.hbs
@@ -26,10 +26,10 @@
           </li>
           {{#if isLoggedIn}}
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-add">Add product</a>
+            <a href="/product-add">Add product</a>
           </li>
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-manage">Manage products</a>
+            <a href="/manage">Manage products</a>
           </li>
           {{/if}}
         </ul>
