All mandatory iterations done

--- a/views/productsManage.hbs
+++ b/views/productsManage.hbs
@@ -8,7 +8,8 @@
         <th class="table-head">Sneaker Ref</th>
         <th class="table-head">Sneaker Price</th>
         <th class="table-head">Edit</th>
-        <th class="table-head">Delete</th>
+        <th class="table-head">Delete</a></th>
+
       </tr>
     </thead>
 
