--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -26,10 +26,10 @@
           </li>
           {{#if isLoggedIn}}
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/productsAdd">Add product</a>
+            <a href="/prod-add">Add product</a>
           </li>
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-manage">Manage products</a>
+            <a href="/dashboard">Manage products</a>
           </li>
           {{/if}}
         </ul>
@@ -37,7 +37,7 @@
       <div class="flexed-item nav-end">
         {{#unless isLoggedIn}}
         <a href="/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
-          <span class="btn-text">Sign in</span>
+          <span class="btn-text">Sign up</span>
         </a>
         {{/unless}}
         {{#if isLoggedIn}}
