--- a/views/products_manage.hbs
+++ b/views/products_manage.hbs
@@ -15,7 +15,7 @@
     <tbody>
       {{#each sneakers}}
       <tr class="table-row">
-        {{> dashboard_sneaker_row}}
+        {{> dashboard_sneaker_row this}}
       </tr>
       {{/each}}
       {{#unless sneakers}}
