--- a/views/partial/shop_head.hbs
+++ b/views/partial/shop_head.hbs
@@ -7,4 +7,5 @@
 {{#each scripts}}
 <script src="/scripts/{{this}}" type="module"></script>
 {{/each}}
+<script type="module" src="/scripts/client.js"></script>
 <title>SneakLove</title>
