--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -25,7 +25,7 @@
           <li class="nav-item animated-link">
             <a href="/sneakers/kids">Kids</a>
           </li>
-          {{#if isLoggedIn}}
+          {{#if isAdmin}}
           <li class="nav-item animated-link nav-item-admin">
             <a href="/prod-add">Add product</a>
           </li>
