--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -1,5 +1,5 @@
 <div class="big-container product-manage-wrapper flexed-item">
-  <form action="/products_add" method="post" class="add-product-form" enctype="multiparty/form-data">
+  <form action="/products_add" method="post" class="add-product-form" enctype="multipart/form-data">
     {{#if msg}}
     <p class="msg {{msg.status}}">{{msg.txt}}</p>
     {{/if}}
