--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -26,10 +26,10 @@
           </li>
           {{#if isLoggedIn}}
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-add">Add product</a>
+            <a href="/products_add">Add product</a>
           </li>
           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-manage">Manage products</a>
+            <a href="/products_manage">Manage products</a>
           </li>
           {{/if}}
         </ul>
