--- a/views/product_edit.hbs
+++ b/views/product_edit.hbs
@@ -1,30 +1,27 @@
 <div class="big-container product-manage-wrapper flexed-item">
-  <form method="post" action="/dashboard/product_edit/{{this._id}}" class="edit-product-form">
+  <form method="post" action="/dashboard/product_edit/{{_id}}" class="edit-product-form">
     <h3 class="form-title"> Edit Sneaker</h3>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-name" class="label-name label">Model name</label>
       <input name="name" id="sneaker-name" type="text" class="input-text input" placeholder="Nike Air Max 90"
-        value="{{sneaker.name}}">
+        value="{{name}}">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-ref" class="label-ref label">Réf.</label>
-      <input name="ref" id="sneaker-ref" type="text" class="input-text input" placeholder="ex: NV23498"
-        value="{{sneaker.ref}}">
+      <input name="ref" id="sneaker-ref" type="text" class="input-text input" placeholder="ex: NV23498" value="{{ref}}">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-size" class="label-ref label">Size</label>
-      <input name="size" id="sneaker-size" type="number" class="input-text input" placeholder="ex: 37"
-        value="{{sneaker.size}}">
+      <input name="size" id="sneaker-size" type="number" class="input-text input" placeholder="ex: 37" value="{{size}}">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-descr" class="label-descr label">Description</label>
       <input name="description" id="sneaker-descr" type="text" class="input-text input"
-        placeholder="The better sneakers to run" value="{{sneaker.description}}">
+        placeholder="The better sneakers to run" value="{{description}}">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-price" class="label-price label">Price</label>
-      <input name="price" id="sneaker-price" type="number" class="sneaker-price input" min="1"
-        value="{{sneaker.price}}">
+      <input name="price" id="sneaker-price" type="number" class="sneaker-price input" min="1" value="{{price}}">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="sneaker-main-cat" class="label-main-cat label">Main category</label>
