--- a/views/partial/dashboard_sneaker_row.hbs
+++ b/views/partial/dashboard_sneaker_row.hbs
@@ -11,7 +11,7 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/dashboard/update/{{this._id}}" class="fa fa-edit table-icon" data-id-sneaker="{{this._id}}">
+  <a href="/dashboard/update/{{this._id}}"> <span class="fa fa-edit table-icon" data-id-sneaker="{{this._id}}"></span>
 </td></a>
 <td class="table-division">
   <a href="/dashboard/delete/{{this._id}}"><span class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"
