filter by tag - completed lab

--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -43,7 +43,7 @@
       </select>
     </div>
 
-    <div class="form-item-wrapper flexed-item">
+    <div class="form-item-wrapper flexed-item test">
       <label for="tags" class="label">Tags</label>
       {{> form_tags_select tags}}
     </div>
