--- a/views/partial/shop_head.hbs
+++ b/views/partial/shop_head.hbs
@@ -4,8 +4,10 @@
 <meta id="site_url" http-equiv="X-UA-Compatible" content="ie=edge" data-url="{{site_url}}">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-{{#each scripts}}
+{{!-- {{#each scripts}}
 <script src="/scripts/{{this}}" type="module"></script>
-{{/each}}
-<script type="module" src="/scripts/client.js"></script>
+{{/each}} --}}
+
 <title>SneakLove</title>
+
+<script type="module" src="/scripts/client.js"></script>
