--- a/views/products.hbs
+++ b/views/products.hbs
@@ -6,7 +6,7 @@
     <ul id="tag_list" class="tag-list" data-category="{{category}}">
       {{#each tags}}
       <li class="tag-list-item">
-        <input id="input_{{this._id}}" type="checkbox" data-tag-id="{{this._id}}" class="checkbox" />
+        <input id="input_{{this._id}}" type="radio" data-tag-id="{{this._id}}" class="checkbox" name="checkbox"/>
         <label for="input_{{this._id}}">{{this.label}}</label>
       </li>
       {{/each}}
