--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -9,11 +9,11 @@
   <form method="post" action="/signin" id="form_user">
     <div class="form-item-wrapper flexed-item">
       <label for="email" class="label-ref label">Email</label>
-      <input name="email" id="email" type="email" class="input-text input" placeholder="albert.biceps@gmail.com" required value="yo@gui.com">
+      <input name="email" id="email" type="email" class="input-text input" placeholder="albert.biceps@gmail.com" required value="xuan@gmail.com">
     </div>
     <div class="form-item-wrapper flexed-item">
       <label for="password" class="label-ref label">Password</label>
-      <input name="password" id="password" type="password"  class="input-text input" placeholder="••••••" required value="1234">
+      <input name="password" id="password" type="password"  class="input-text input" placeholder="••••••" required value="123">
     </div>
     <button class="button-primary white">Log in !</button>
   </form>
