--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -37,9 +37,15 @@
       </div>
       <div class="flexed-item nav-end">
         {{#unless isLoggedIn}}
-        <a  href="/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
+          {{#if currentUser}}
+          <a  href="/signin" id="nav_login" class="button-ternary flexed-item nav-end-item">
           <span class="btn-text">Sign in</span>
         </a>
+          {{else}}
+          <a  href="/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
+          <span class="btn-text">Sign up</span>
+        </a>
+          {{/if}}
         {{/unless}}
         {{#if isLoggedIn}}
         <a  href="/logout" id="nav_logout" class="button-ternary flexed-item nav-end-item">
