--- a/views/products_add.hbs
+++ b/views/products_add.hbs
@@ -35,9 +35,9 @@
       <label for="category" class="label-main-cat label">Main category</label>
       <select id="category" name="category" class="select" required>
         <option value="-1" disabled selected>Choose a category</option>
-        <option value="men">Men</option>
-        <option value="women">Women</option>
-        <option value="kids">Kids</option>
+        <option value="Men">Men</option>
+        <option value="Women">Women</option>
+        <option value="Kids">Kids</option>
       </select>
     </div>
 
