--- a/views/partial/dashboard_sneaker_row.hbs
+++ b/views/partial/dashboard_sneaker_row.hbs
@@ -11,7 +11,7 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/product-edit/{{this._id}}">
+  <a href="/prod-edit/{{this._id}}">
     <i class="fa fa-edit table-icon"></i></a>
 </td>
 <td class="table-division">
