--- a/views/product_edit.hbs
+++ b/views/product_edit.hbs
@@ -1,33 +1,33 @@
 <div class="big-container product-manage-wrapper flexed-item">
-  <form method="pasta" action="/prod-edit/{{sneaker._id}}" class="edit-product-form">
+  <form method="post" action="/prod-edit/{{sneakers._id}}" class="edit-product-form">
     <h3 class="form-title"> Edit Sneaker</h3>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-name" class="label-name label">Model name</label>
-      <input id="sneaker-name" type="text" class="input-text input" placeholder="Nike Air Max 90" value="{{sneaker.name}}">
+      <label for="name" class="label-name label">Model name</label>
+      <input id="name" name="name" type="text" class="input-text input" placeholder="Nike Air Max 90" value="{{sneakers.name}}">
     </div>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-ref" class="label-ref label">Réf.</label>
-      <input id="sneaker-ref" type="text" class="input-text input" placeholder="ex: NV23498" value="{{sneaker.ref}}">
+      <label for="ref" class="label-ref label">Réf.</label>
+      <input id="ref" name="ref" type="text" class="input-text input" placeholder="ex: NV23498" value="{{sneakers.ref}}">
     </div>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-size" class="label-ref label">Size</label>
-      <input id="sneaker-size" type="number" class="input-text input" placeholder="ex: 37" value="{{sneaker.size}}">
+      <label for="size" class="label-ref label">Size</label>
+      <input id="size" name="size" type="number" class="input-text input" placeholder="ex: 37" value="{{sneakers.size}}">
     </div>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-descr" class="label-descr label">Description</label>
-      <input id="sneaker-descr" type="text" class="input-text input" placeholder="The better sneakers to run" value="{{sneaker.description}}">
+      <label for="description" class="label-descr label">Description</label>
+      <input id="description" name="description" type="text" class="input-text input" placeholder="The better sneakers to run" value="{{sneakers.description}}">
     </div>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-price" class="label-price label">Price</label>
-      <input id="sneaker-price" type="number" class="sneaker-price input" min="1" value="{{sneaker.price}}">
+      <label for="price" class="label-price label">Price</label>
+      <input id="price" name="price" type="number" class="sneaker-price input" min="1" value="{{sneakers.price}}">
     </div>
     <div class="form-item-wrapper flexed-item">
-      <label for="sneaker-main-cat" class="label-main-cat label">Main category</label>
-      <select id="main_category" class="select" required>
+      <label for="category" class="label-main-cat label">Main category</label>
+      <select id="category" name="category" class="select" required>
         <option value="-1" disabled selected>Choose main Category...</option>
-        <option value="men">Men</option>
-        <option value="women">Women</option>
-        <option value="kids">Kids</option>
+        <option value="Men">Men</option>
+        <option value="Women">Women</option>
+        <option value="Kids">Kids</option>
       </select>
     </div>
     <div class="form-item-wrapper flexed-item">
