--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -37,12 +37,17 @@
       </div>
       <div class="flexed-item nav-end">
         {{#unless isLoggedIn}}
-        <a  href="/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
+        <a  href="/auth/signin" id="nav_login" class="button-ternary flexed-item nav-end-item">
           <span class="btn-text">Sign in</span>
         </a>
+
+        <a  href="/auth/signup" id="nav_login" class="button-ternary flexed-item nav-end-item">
+          <span class="btn-text">Sign up</span>
+        </a>
+
         {{/unless}}
         {{#if isLoggedIn}}
-        <a  href="/logout" id="nav_logout" class="button-ternary flexed-item nav-end-item">
+        <a  href="/auth/signout" id="nav_logout" class="button-ternary flexed-item nav-end-item">
           <span class="btn-text">Log out</span>
         </a>
         {{/if}}
